# cdscanner

./: Cargo.toml  secrets.example.toml
src/: discogs.rs  main.rs  musicbrainz.rs  whatapi.rs
