[package]
name = "cdscanner"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
musicbrainz_rs = { version = "0.5.0", features = ["blocking"], default-features = false }
serde = "1.0.169"
serde_json = "1.0.100"
# need governor 83450284ec60a77d2a81cc97723df3c959d80d91
governor = { git = "https://github.com/antifuchs/governor.git", branch="master" }
nonzero_ext = "0.3.0"
rouille = "3.6.2"
env_logger = "0.10.0"
toml = "0.7.6"
itertools = "0.11.0"
chrono = "0.4.26"
